@@ -1,3 +1,4 @@
+06. Feb. 2012 - amo - changed IComponent-API to getListener("id", message) getListener now takes parameters; to avoid something like getListener().getAction().setMessage()....
 14. Dez. 2011 - amo - add getActionListener() to IWorkbench to allow workbench to send messages
 09. Dez. 2011 - amo - split the delegator interface in message and component delegator
 08. Dez. 2011 - amo - renamed statelesscomponentcoordinator in *Scheduler; removed dependency between statelesscomponent and scheduler, introduced new package
